--- a/public/index.html
+++ b/public/index.html
@@ -254,8 +254,7 @@
 
       <footer class="footer">
         <p>
-          Tip: Keep this page in <code>public/index.html</code> and serve it with
-          <code>app.use("/api", express.static("public"))</code>.
+          Created by Matthew Doughty :)
         </p>
       </footer>
     </main>
